# NEPattern

./: .coveragerc  .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: test.yml
nepattern/: __init__.py  base.py  config.py  context.py  context.pyi  core.py  core.pyi  func.py  main.py  main.pyi  util.py
nepattern/i18n/: .config.json  .lang.schema.json  .template.json  en-US.json  zh-CN.json
